--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">TheCatAPI</string>
-    <string name="tv_title">CatBreeds</string>
+    <string name="tv_title">Cat Breeds</string>
     <string name="description_img_cat">image cat</string>
     <string name="error_accessing_browser">Error accessing the browser</string>
     <string name="error_exist_url">url does not exist</string>
+    <string name="description_title">Discover the feline world</string>
 </resources>
