--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">TheCatAPI</string>
     <string name="tv_title">Cat Breeds</string>
+    <string name="tv_title_dogs">Dogs Breeds</string>
     <string name="description_img_cat">image cat</string>
     <string name="error_accessing_browser">Error accessing the browser</string>
     <string name="error_exist_url">url does not exist</string>
     <string name="description_title">Discover the feline world</string>
+    <string name="description_title_dogs">Discover the Canine world</string>
     <string name="title_search">Search</string>
     <string name="btn_dogs">Dogs</string>
     <string name="btn_cats">Cats</string>
